tests/fixtures/LatestTests/ObjectTests/errors/initializer_type_mismatch.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: 123,
    age: "thirty"
}

